# jaws-2

./: .gitignore
jaws2_bringup/: CMakeLists.txt  package.xml
jaws2_bringup/config/: isometric.rviz
jaws2_bringup/launch/: jaws2_viewer.launch
jaws2_control/: CMakeLists.txt  package.xml
jaws2_control/config/: jaws2_control.yaml
jaws2_control/launch/: jaws2_control.launch
jaws2_control/src/: attitude_controller.cpp
jaws2_controls/: CMakeLists.txt
jaws2_controls/launch/: jaws2_control.launch
jaws2_description/: package.xml
jaws2_description/launch/: jaws2_description.launch  jaws2_rviz.launch
jaws2_description/meshes/: dome.stl
jaws2_description/urdf/: jaws2.gazebo.xacro  jaws2.urdf  jaws2.urdf.xacro  jaws2_housing.urdf.xacro  jaws2_mounting.urdf.xacro  jaws2_properties.urdf.xacro  jaws2_visual.urdf.xacro  make_jaws2  seabotix_properties.urdf.xacro  seabotix_thrusters.urdf.xacro
jaws2_estimation/: CMakeLists.txt  package.xml
jaws2_estimation/launch/: jaws2_imu_orientation.launch  jaws2_imu_transform.launch  jaws2_q2rpy.launch
jaws2_gazebo/: CMakeLists.txt  package.xml
jaws2_gazebo/launch/: jaws2_gazebo.launch
jaws2_gazebo/src/: jaws2_gazebo.cpp
jaws2_hardware/: CMakeLists.txt  README.md  package.xml
jaws2_hardware/firmware/: firmware.ino
jaws2_hardware/launch/: jaws2_hardware.launch  jaws2_serial.launch
jaws2_hardware/src/: airplane_cal.cpp  hardware_interface.cpp  serial_port.cpp
jaws2_joy/: CMakeLists.txt
jaws2_joy/src/: airplane.cpp
jaws2_launch/: CMakeLists.txt  package.xml
jaws2_launch/launch/: jaws2_imu.launch  jaws2_simulator.launch  jaws2_viewer.launch
jaws2_msgs/: CMakeLists.txt  package.xml
jaws2_msgs/msg/: ServoCommand.msg  ServoCommandStamped.msg  ServoState.msg  ServoStateStamped.msg
jaws2_navigation/: CMakeLists.txt  README.md  package.xml
jaws2_navigation/launch/: jaws2_navigation.launch
jaws2_navigation/src/: quat_to_rpy.cpp  thrust_mapper.cpp
jaws2_robot/: CMakeLists.txt  package.xml
jaws2_serial/: CMakeLists.txt  README.md  package.xml
jaws2_serial/firmware/: firmware.ino
jaws2_serial/launch/: cc_400hfs-l.launch  jaws2_serial.launch
jaws2_serial/src/: hardware.cpp
jaws2_solver/: CMakeLists.txt
jaws2_solver/src/: airplane_mapper.cpp
jaws2_teleop/: CMakeLists.txt  README.md  package.xml
jaws2_teleop/launch/: jaws2_teleop.launch  testing.launch
jaws2_vision/: CMakeLists.txt  package.xml
launch/: rov.launch
scripts/: 10-imu_3dm_gx4.rules  configure-udev  install-arbotix
