<?xml version="1.0"?>
<package>
  <name>jaws2_gazebo</name>
  <version>0.3.0</version>
  <description>Simulation of OSU's Jaws 2 ROV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/jaws-2</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
  </export>
</package>
