<?xml version="1.0"?>
<package>
  <name>jaws2_gazebo</name>
  <version>0.3.0</version>
  <description>Simulation of OSU's Jaws 2 ROV.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/jaws-2</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>jaws2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>jaws2_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
