<?xml version="1.0"?>
<package>
  <name>jaws2_hardware</name>
  <version>0.3.0</version>
  <description>Hardware abstraction layer for Jaws 2.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="website">http://github.com/uwrt-osu/jaws-2</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="edin.3@osu.edu">Peter Edin</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jaws2_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>jaws2_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>

  <export>
  </export>
</package>
