<?xml version="1.0"?>
<package>
  <name>jaws2_navigation</name>
  <version>0.3.0</version>
  <description>Navigation package for Jaws 2.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/jaws-2</url>

  <license>BSD</license>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>jaws2_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>jaws2_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
